2006-11-14  Andreas Schwab  <schwab@suse.de>

	* term/xterm.el (terminal-init-xterm): Add more key bindings.

2006-11-13  Kim F. Storm  <storm@cua.dk>

	* ido.el (ido-copy-current-word): C-o copies region if active.

2006-11-13  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-emph-face): Fix typo in variable name.

2006-11-13  Juanma Barranquero  <lekktu@gmail.com>

	* ediff.el (ediff-revision):
	* files.el (set-visited-file-name):
	* mail/rmailout.el (rmail-output-body-to-file):
	Use `format', not `message', in `y-or-n-p' call.

2006-11-13  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-metaleft): Call `org-outdent-item' on bullets.
	(org-metaright): Call `org-indent-item' on bullets.
	(org-timestamp-change): Set `org-last-changed-timestamp'.
	(org-current-line): Make sure (bolp) returns correct result.
	(org-agenda-change-all-lines): Make sure highlighting TODO always works.

2006-11-12  Richard Stallman  <rms@gnu.org>

	* language/european.el (turkish-case-conversion-enable)
	(turkish-case-conversion-disable): New functions.
	("Turkish" lang env): Use them.

	* international/characters.el (case table):
	Do nothing special for i and I.

	* subr.el (remove-overlays): Fix last change.

	* cus-edit.el (custom-save-all): Use find-file-visit-truename
	for visiting the custom file.

2006-11-12  Markus Triska  <triska@gmx.at>

	* play/handwrite.el (handwrite): Also process lines not ending
	with newline.  Replace some position-fiddling with different
	logic.  Improve performance.

2006-11-12  Stephen Leake  <stephen_leake@stephe-leake.org>

	* progmodes/ada-xref.el (ada-prj-default-check-cmd): New variable,
	replacing deleted variable `ada-check-switch'.
	(ada-project-file-extension): Rename to `ada-prj-file-extension'.
	(ada-xref-project-files): Improve doc string.
	(ada-find-executable): New function.
	(ada-initialize-runtime-library): Use `ada-find-executable'.