@@ -1,3 +1,8 @@
+2006-11-14  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* progmodes/python.el (inferior-python-mode-syntax-table): New var.
+	(inferior-python-mode): Use it.
+
 2006-11-14  Andreas Schwab  <schwab@suse.de>
 
 	* term/xterm.el (terminal-init-xterm): Add more key bindings.
